--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Create an Account on Class 7<sup>th</sup> C</h1>
-    <form action="register.php" method="post">
+    <form method="post">
         <p>
             Username: <input type="text" name="user" required><br>
             Password: <input type="password" name="password" required><br>
