--- a/login.html
+++ b/login.html
@@ -5,17 +5,12 @@
 </head>
 <body>
     <h1>Welcome to Homework Hub</h1>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-        {% for category, message in messages %}
-            <p class="{{ category }}">{{ message }}</p>
-        {% endfor %}
-    {% endwith %}
     <form method="POST">
         <p>
             Username: <input type="text" name="user" required><br><br>
             Password: <input type="password" name="password" required><br><br>
             <input type="submit" value="Log in">
-            <a href="{{ url_for('register') }}">Register</a>
+            <a href="register">Register</a>
         </p>
     </form>
 </body>
