--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <h1>Register</h1>
-    <form id="register-form" style="display: none;">
+    <form id="register-form">
         <label for="user">Username:</label>
         <input type="text" id="user" name="user" required><br><br>
         <label for="password">Password:</label>
@@ -62,39 +62,34 @@
         
         <!-- reCAPTCHA widget -->
         <div class="g-recaptcha" data-sitekey="6Lc5sZsqAAAAAAKa1wJY_gWyEt1GFwEDsYKnOKxN"></div><br>
+
+        <!-- Terms and Conditions checkbox -->
+        <label for="acceptTC">
+            <input type="checkbox" id="acceptTC" name="acceptTC" required>
+            I accept the <a herf="term.html">terms and conditions</a>
+        </label><br><br>
         
         <input type="submit" value="Register">
         <p>Already have an account? <a href="login.html">Login</a></p>
     </form>
 
     <script>
-        // Development password
-        const devPassword = "dev1234";
-
-        // Ask for the development password
-        const userInput = prompt("Enter the development password to access this page:");
-
-        if (userInput === devPassword) {
-            document.getElementById("register-form").style.display = "block";
-        } else {
-            alert("Access denied. Closing the tab...");
-            window.close(); // Attempt to close the tab
-            if (!window.closed) {
-                alert("Tab closure is blocked by your browser.");
-                window.location.href = "about:blank"; // Redirect to a blank page
-            }
-        }
-
         // Handle registration
         document.getElementById("register-form").addEventListener("submit", function(event) {
             event.preventDefault();
 
             const username = document.getElementById("user").value;
             const password = document.getElementById("password").value;
+            const acceptTC = document.getElementById("acceptTC").checked;
 
             // Check if reCAPTCHA is completed
             if (grecaptcha.getResponse() === "") {
                 alert("Please complete the reCAPTCHA.");
+                return;
+            }
+
+            if (!acceptTC) {
+                alert("You must accept the terms and conditions.");
                 return;
             }
 
