--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
         <!-- Terms and Conditions checkbox -->
         <label for="acceptTC">
             <input type="checkbox" id="acceptTC" name="acceptTC" required>
-            I accept the <a herf="term.html">terms and conditions</a>
+            I accept the <a href="term.html">terms and conditions</a>
         </label><br><br>
         
         <input type="submit" value="Register">
@@ -74,6 +74,17 @@
     </form>
 
     <script>
+        // Show contribution message when the page is loaded
+        window.onload = function() {
+            const contribute = confirm("Would you like to contribute?");
+            
+            if (contribute) {
+                // Redirect to fund.html if the user clicks "OK"
+                window.location.href = "fund.html";
+            }
+            // If they click "Cancel", just stay on the current page (do nothing)
+        };
+
         // Handle registration
         document.getElementById("register-form").addEventListener("submit", function(event) {
             event.preventDefault();
