--- a/register.html
+++ b/register.html
@@ -13,6 +13,7 @@
             background-color: #121212;
             color: #E0E0E0;
         }
+
         form {
             margin: auto;
             padding: 20px;
@@ -22,7 +23,11 @@
             background-color: #1E1E1E;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
         }
-        input[type="text"], input[type="password"] {
+
+        input[type="text"],
+        input[type="password"],
+        input[type="email"],
+        input[type="number"] {
             width: 90%;
             padding: 10px;
             margin: 10px 0;
@@ -31,6 +36,7 @@
             background-color: #2E2E2E;
             color: #E0E0E0;
         }
+
         input[type="submit"] {
             background-color: #007BFF;
             color: white;
@@ -39,24 +45,35 @@
             border-radius: 5px;
             cursor: pointer;
         }
+
         input[type="submit"]:hover {
             background-color: #0056b3;
         }
+
         a {
             text-decoration: none;
             color: #4DA6FF;
         }
+
         a:hover {
             color: #80CFFF;
         }
     </style>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="app.js" defer></script>
 </head>
 <body>
     <h1>Register</h1>
     <form id="register-form">
         <label for="user">Username:</label>
         <input type="text" id="user" name="user" required><br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="age">Age:</label>
+        <input type="number" id="age" name="age" required min="5"><br><br>
+
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br><br>
         
@@ -72,48 +89,5 @@
         <input type="submit" value="Register">
         <p>Already have an account? <a href="login.html">Login</a></p>
     </form>
-
-    <script>
-        // Show contribution message when the page is loaded
-        window.onload = function() {
-            const contribute = confirm("Would you like to contribute?");
-            
-            if (contribute) {
-                // Redirect to fund.html if the user clicks "OK"
-                window.location.href = "fund.html";
-            }
-            // If they click "Cancel", just stay on the current page (do nothing)
-        };
-
-        // Handle registration
-        document.getElementById("register-form").addEventListener("submit", function(event) {
-            event.preventDefault();
-
-            const username = document.getElementById("user").value;
-            const password = document.getElementById("password").value;
-            const acceptTC = document.getElementById("acceptTC").checked;
-
-            // Check if reCAPTCHA is completed
-            if (grecaptcha.getResponse() === "") {
-                alert("Please complete the reCAPTCHA.");
-                return;
-            }
-
-            if (!acceptTC) {
-                alert("You must accept the terms and conditions.");
-                return;
-            }
-
-            if (localStorage.getItem(username)) {
-                alert("Username already exists. Please choose a different username.");
-            } else if (username && password) {
-                localStorage.setItem(username, password);
-                alert("Account created successfully! Redirecting to login page...");
-                window.location.href = "login.html";
-            } else {
-                alert("Please fill in all fields.");
-            }
-        });
-    </script>
 </body>
 </html>
